Book test code 작성 도중, Tag가 필요해서 Tag model 리팩토링 및 태그 생성, 조회  API 구현, Tag 관련 테스트코드 추가
